After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742825 - iconcache: Fix icon data copy into cairo surface
iconcache: Fix icon data copy into cairo surface
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2015-01-12 21:29 UTC by Rui Matos
Modified: 2015-01-13 15:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
iconcache: Fix icon data copy into cairo surface (1.30 KB, patch)
2015-01-12 21:29 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2015-01-12 21:29:20 UTC
There's still something wrong here because with the patches in bug
742824 I'm still getting wrong colors. I couldn't figure what else is
wrong yet though, so just leaving this here for now.
Comment 1 Rui Matos 2015-01-12 21:29:22 UTC
Created attachment 294379 [details] [review]
iconcache: Fix icon data copy into cairo surface

The stride is in bytes but we're copying ints.
Comment 2 Jasper St. Pierre (not reading bugmail) 2015-01-12 21:31:46 UTC
Review of attachment 294379 [details] [review]:

Nice catch.
Comment 3 Rui Matos 2015-01-13 15:06:50 UTC
The wrong colors problem is actually in the shell patch, see comment
on bug 742824

Attachment 294379 [details] pushed as 6609d9c - iconcache: Fix icon data copy into cairo surface