iconcache: Fix icon data copy into cairo surface

The stride is in bytes but we're copying ints.

https://bugzilla.gnome.org/show_bug.cgi?id=742825